--- a/final_project.qmd
+++ b/final_project.qmd
@@ -18,11 +18,11 @@ execute:
 
 # Introduction
 
-We were interested in investigating the relationship between gross domestic product (GDP) and the sustainable development index (SDI). GDP is a metric that provides a monetary sum of the services and goods outputted from a country per person (https://www.focus-economics.com/economic-indicator/gdp-per-capita/). SDI measures how efficient a countries developments are (https://www.sustainabledevelopmentindex.org/). Before forming a hypothesis about the relationship between these two variables, we investigated development in different countries. We found that some of the leading countries in sustainability efforts across governance, environmental and social companies include Denmark, Finland, Sweden and Norway which are all countries that are developed countries versus some of the lowest being Burkina Faso, Guinea, and Ethiopia which are developing nations (https://www.robeco.com/en-us/sustainable-investing/expertise/most-sustainable-countries-in-the-world). We found a sector of research investigating the relationship between the rich and climate change and how they are leading to rapid climate change (Paddison, 2021). Additionally, this stemmed into articles discussing whether the rich have a responsibility to pay for their impact on climate change (Gharib, 2021). Additionally, there is a larger gap in sustainability efforts of richer countries compared to poorer countries (Sexton, 2023). Overall, we were motivated to see whether richer countries do actually receive higher sustainability scores.
+We were interested in investigating the relationship between gross domestic product (GDP) per capita and the sustainable development index (SDI). Gross domestic product (GDP) per capita is a metric that provides a monetary sum of the services and goods outputted from a country per person (FocusEconomics, 2025). SDI measures how efficient a countries developments are (Sustanable Development Index, 2025). Before forming a hypothesis about the relationship between these two variables, we investigated development in different countries. We found that some of the leading countries in sustainability efforts across governance, environmental and social companies include Denmark, Finland, Sweden and Norway which are all countries that are developed countries versus some of the lowest being Burkina Faso, Guinea, and Ethiopia which are developing nations (Robeco.com, 2024). We found a sector of research investigating the relationship between the rich and climate change and how they are leading to rapid climate change (Paddison, 2021). Additionally, this stemmed into articles discussing whether the rich have a responsibility to pay for their impact on climate change (Gharib, 2021). Additionally, there is a larger gap in sustainability efforts of richer countries compared to poorer countries (Sexton, 2023). Overall, we were motivated to see whether richer countries do actually receive higher sustainability scores.
 
-For these reasons and due to our preliminary research that we conducted we hypothesized that countries with higher GDP will have higher sustainability scores. Additionally, we hypothesized that there is a positive correlation between country wealth and sustainability score of countries.
+**For these reasons and due to our preliminary research that we conducted we hypothesized that countries with higher gross domestic product (GDP) per capita** **will have higher sustainability scores. Additionally, we hypothesized that there is a positive correlation between country wealth and sustainability score of countries.**
 
-After completing this report we hope to provide an analysis of the relationship between GDP and sustainability scores across different countries , evaluate outliers in the data, an ultimately asses whether sustainability outcomes are better or worse depending on a country's GDP.
+After completing this report we hope to provide an analysis of the relationship between gross domestic product (GDP) per capita and sustainability scores across different countries , evaluate outliers in the data, an ultimately asses whether sustainability outcomes are better or worse depending on a country's gross domestic product (GDP) per capita.
 
 # Data Description
 
@@ -36,9 +36,9 @@ library(scales) #for formatting p-values
 library(broom)
 ```
 
-We extracted two datasets from GapMinder on May 20, 2025. The first dataset is where the GDP per Capita was sourced from. The explanatory variable we were interested in is GDP per Capita (<http://gapm.io/dgdpcap_cppp>) from 1800-2022. For 1990-2022, the series aligns with the World Bank’s GDP per capita data (<https://data.worldbank.org/indicator/NY.GDP.PCAP.PP.KD>), published in April 2024. Prior to 1990, data is drawn from the 2023 version of the Maddison Project Database (<https://www.rug.nl/ggdc/historicaldevelopment/maddison/releases/maddison-project-database-2023>), which offers historical GDP estimates for 169 countries. In rare cases where neither source provided data (typically between 1950-2019) Gapminder uses the Penn World Table (PWT) version 10.01 (<https://www.rug.nl/ggdc/productivity/pwt/>), which covers 183 countries. When none of the above sources are available, Gapminder falls back on its own historical estimates, primarily from GDP Per capita v26 and earlier versions (<https://www.gapminder.org/documentation/documentation/gapdoc001_v9.pdf>). Additionally, Gapminder has produced new estimates for countries experiencing crises, including Afghanistan, Belarus, Cuba, North Korea, and others (these data points may be less accurate). The various sources were combined and cleaned for GapMinder.
+We extracted two datasets from GapMinder on May 20, 2025. The first dataset is where the GDP per Capita was sourced from. The explanatory variable we were interested in is GDP per Capita (GDP Per Capita, GapMinder) from 1800-2022. For 1990-2022, the series aligns with the World Bank’s GDP per capita data (GDP Per Capita, WorldBank), published in April 2024. Prior to 1990, data is drawn from the 2023 version of the Maddison Project Database (Madison Project Database, 2024), which offers historical GDP estimates for 169 countries. In rare cases where neither source provided data (typically between 1950-2019) Gapminder uses the Penn World Table (PWT) version 10.01 (PWT, 2024), which covers 183 countries. When none of the above sources are available, Gapminder falls back on its own historical estimates, primarily from GDP Per capita v26 and earlier versions (Lindgen, 2011). Additionally, Gapminder has produced new estimates for countries experiencing crises, including Afghanistan, Belarus, Cuba, North Korea, and others (these data points may be less accurate). The various sources were combined and cleaned for GapMinder.
 
-The second dataset is where the sustainable development index was sourced from. The response variable we were interested in is the Sustainable Development Index (<http://gapm.io/dsdi>) from 1990-2019. The Sustainable Development Index is a research project focused on the ecological efficiency of nations in delivering human development. The data was somewhat cleaned/split into different categories and then posted to GapMinder (https://www.sustainabledevelopmentindex.org/methods).
+The second dataset is where the sustainable development index was sourced from. The response variable we were interested in is the Sustainable Development Index (U. Jean, 2021) from 1990-2019. The Sustainable Development Index is a research project focused on the ecological efficiency of nations in delivering human development. The data was somewhat cleaned/split into different categories and then posted to GapMinder.
 
 ```{r}
 sustainability <- read_csv("sdi.csv")
@@ -76,11 +76,10 @@ df.clean <- sustainability.long |>
   left_join(gdp_long, join_by(country, year)) |> 
   filter(!if_any(.cols = sdi:gdp, .fns = ~is.na(.x))) |> 
   mutate(year = as.numeric(year))
-
-str(df.clean)
 ```
 
-```{r}
+```{r, eval=FALSE}
+#we used this to find which countries had data, countries missing data are listed in the following paragraph
 df.clean |> 
   group_by(country) |> 
   summarize(across(.cols = year:gdp, 
@@ -93,7 +92,7 @@ df.clean |>
   
 ```
 
-Our dataset includes four variables (Country, Year, SDI and GDP) with a total of 2,306 observations. Note that each observation is identified by a country and year (e.g. Ethiopia, 2018).
+Our dataset includes four variables (Country, Year, SDI and GDP per capita) with a total of 2,306 observations. Note that each observation is identified by a country and year (e.g. Ethiopia, 2018).
 
 We excluded observations missing SDI or GDP data, as these missing values occurred due to the datasets covering additional years not present in the other. For example, the SDI dataset covered only 1990–2019, whereas the GDP dataset spaned 1800–2100. Therefore, GDP values exist for years where SDI data does not, and vice versa.
 
@@ -105,9 +104,9 @@ When data cleaning, removing missing SDI or GDP data mainly affected small or po
 
 ## 2.1 Data Visualization
 
-In the following plots, we have decided to take the mean GDP per capita accross the years 1990 to 2019 so that each point on the following plots represent one country. We decided to present the data in this way for clarity.
+In the following plots, we have decided to take the mean GDP per capita across the years 1990 to 2019 so that each point on the following plots represent one country. We decided to present the data in this way for clarity.
 
-The following plot demonstrates the relationship between the sustainability (in the form of the sustainability development index) and gross domestic product per capita for a country averaged over the years 1990 to 2019. The form of the relationship appears quadratic due to the predominate curve 20,000 dollars for GDP per capita. The direction is positive before 10,000 dollars for GDP per capita and negative after 10,000 dollars for GDP per capita. The strength is strong before 10,000 dollars for GDP per capita with increasing scatter after 10,000 dollars for GDP per capita making it relatively weak. Overall, there does not appear to be any unusual observations.
+The following plot demonstrates the relationship between the sustainability (in the form of the sustainability development index) and gross domestic product per capita for a country averaged over the years 1990 to 2019. The form of the relationship appears quadratic due to the predominate curve at 10,000 dollars for GDP per capita. The direction is positive before 10,000 dollars for GDP per capita and negative after 10,000 dollars for GDP per capita. The strength is strong before 10,000 dollars for GDP per capita with increasing scatter after 10,000 dollars for GDP per capita making it relatively weak. Overall, there does not appear to be any unusual observations.
 
 ```{r}
 df.clean |> 
@@ -122,7 +121,7 @@ df.clean |>
   labs(x = "GDP per Capita (2017 dollars)", y = "", subtitle = "Sustainable Development Index (SDI)", title = "Relationship between GDP per capita and Sustainability (SDI) \n from 1990 to 2019")
 ```
 
-To enhance the readability of our previous plot we made some adjustments. The following plot demonstrates the relationship between the natural log of sustainability (in the form of the sustainability development index) and natural log of gross domestic product per capita for a country averaged over the years 1990 to 2019 with a graphical separation between GDP per capita for high (greater than or equal to 20000 dollars) and low (less than 20000 dollars) GDP per capita. The form of the relationship appears linear for the high and low GDP plots. The direction is negative for high GDP per capita and positive for low GDP per capita. The strength of both is moderately strong. Overall, there does not appear to be any unusual observations in either plots.
+To enhance the readability of our previous plot we made some adjustments. The following plot demonstrates the relationship between the sustainability (in the form of the sustainability development index) and natural log of gross domestic product per capita for a country averaged over the years 1990 to 2019 with a graphical separation between GDP per capita for high (greater than or equal to 20000 dollars) and low (less than 20000 dollars) GDP per capita. The form of the relationship appears linear for the high and low GDP plots. The direction is negative for high GDP per capita and positive for low GDP per capita. The strength of both is moderately strong. Overall, there does not appear to be any unusual observations in either plots.
 
 ```{r}
 #preliminary scatterplot
@@ -144,7 +143,7 @@ df.clean |>
   
 ```
 
-Particularly interested in how richer countries are involved with sustainability efforts, we have decided to focus only on the subplot that demonstrates high GDP per capita countries. The following plot demonstrates the relationship between the natural log of sustainability (in the form of the sustainability development index) and natural log of gross domestic product per capita for a country averaged over the years 1990 to 2019 for high (greater than or equal to 20000 dollars) GDP per capita. The form of the relationship appears linear with the points following a straight line. The direction is negative with an increase in GDP per capita in 2017 dollars resulting in a decrease in sustainability development index (SDI). The strength is moderately strong with a slight amount of scatter around the line. Overall, there does not appear to be any unusual observations in either plots.
+Particularly interested in how richer countries are involved with sustainability efforts, we have decided to focus only on the subplot that demonstrates high GDP per capita countries. The following plot demonstrates the relationship between the sustainability (in the form of the sustainability development index) and natural log of GDP per capita for a country averaged over the years 1990 to 2019 for high (greater than or equal to 20000 dollars) GDP per capita. The form of the relationship appears linear with the points following a straight line. The direction is negative with an increase in GDP per capita in 2017 dollars resulting in a decrease in sustainability development index (SDI). The strength is moderately strong with a slight amount of scatter around the line. Overall, there does not appear to be any unusual observations in either plots.
 
 ```{r}
 df.clean |> 
@@ -155,30 +154,12 @@ df.clean |>
   geom_point()+
   geom_smooth(method = "lm") +
   theme_minimal() +
-  labs(x = "GDP per Capita (2017 dollars)", y = "", subtitle = "Sustainable Development Index (SDI) of High GDP Countries", title = "Relationship between GDP per capita and Sustainability (SDI) \n from 1990 to 2019")
+  labs(x = "High GDP per Capita (2017 dollars)", y = "", subtitle = "Sustainable Development Index (SDI) of High GDP Countries", title = "Relationship between GDP per capita and Sustainability (SDI) \n from 1990 to 2019")
 
 
 ```
 
-```{r}
-#Residuals vs Fitted
-df.lm <- df.clean|>
-  group_by(country) |>
-  filter(mean(gdp) > 20000)|>
-  summarize (mean.sdi = mean(sdi), 
-             mean.gdp = mean(gdp))
-
-lm.fit <- lm(data = df.lm, mean.sdi ~ mean.gdp)
-
-lm.fit |> 
-  augment() |> 
-  ggplot(aes(x = .fitted, y = .resid)) +
-  geom_point() +
-  geom_hline(yintercept = 0, linetype = "dashed", 
-             color = "red", lwd = 1.5)
-```
-
-The following plot demonstrates the relationship between the natural log of sustainability (in the form of the sustainability development index) and natural log of gross domestic product per capita for high (greater than or equal to 20000 dollars) GDP per capita countries over the years 1990 to 2019. The form of the relationship appears linear with the points following a straight line. The direction is negative with an increase in GDP per capita in 2017 dollars resulting in a decrease in sustainability development index (SDI). The strength is moderately strong with a slight amount of scatter around the line. Overall, there does not appear to be any unusual observations in either plots. Over time, the sustainability index decreased and the GDP per Capita in 2017 dollars increased.
+The following plot demonstrates the relationship between the sustainability (in the form of the sustainability development index) and natural log of GDP per capita for high (greater than or equal to 20000 dollars) GDP per capita countries over the years 1990 to 2019. The form of the relationship appears linear with the points following a straight line. The direction is negative with an increase in GDP per capita in 2017 dollars resulting in a decrease in sustainability development index (SDI). The strength is moderately strong with a slight amount of scatter around the line. Overall, there does not appear to be any unusual observations in the plot. Over time, the frames representing each year shift down and to the right meaning that the sustainability index decreased and the GDP per Capita in 2017 dollars increased.
 
 ```{r}
 df.clean |> 
@@ -203,7 +184,7 @@ df.clean |>
 
 As mentioned previously, we have decided to take the mean GDP per capita accross the years 1990 to 2019 so that each point on the following plots represent one country. We decided to present the data in this way for clarity.
 
-The statistical method that we selected was the simple linear regression. A simple linear regression assumes that the relationship between the gross domestic product per capita and the sustainability development index has a linear function for the form. This was deemed an appropriate method because the relationship between the two updated variables are linear, the observations do not depend on one another, the residuals were distributed normally, and there is constant variability.
+The statistical method that we selected was the simple linear regression because our data generally has a simple linear form. A simple linear regression assumes that the relationship between the natural log of the GDP per capita and the sustainability development index has a linear function.
 
 The estimated regression model follows the following notation:
 
@@ -215,7 +196,7 @@ The linear regression model coefficients are as follows:
 
 The intercept of 73.18758 indicates when a country's GDP per capita is 0 dollars, the country's sustainability index is 73.18758 units.
 
-The slope is -0.00067. We estimate that for every 10000 increase in a county's GDP per capita, their sustainability development index will decrease by 6.7 units.
+The slope is -0.00067. We estimate that for every 10,000 increase in a county's GDP per capita, their sustainability development index will decrease by 6.7 units.
 
 ```{r}
 df.clean.model <- df.clean |> 
@@ -234,7 +215,7 @@ summary(lm.model) |>
   kable_material()
 ```
 
-Citation for formatting p-values using Scales package: <https://scales.r-lib.org/reference/label_pvalue.html>
+(Formatted p-values using Scales package (Label P Values, 2025))
 
 ### Assumptions
 
@@ -253,7 +234,7 @@ Citation for formatting p-values using Scales package: <https://scales.r-lib.org
       xlab("Residuals")
     ```
 
-4.  **Equal Variance of Residuals** - the residuals are roughly spaced out evenly with respected to the fitted values (values along the line).
+4.  **Equal Variance of Residuals** - the residuals are roughly spaced out evenly with respect to the fitted values (values along the line).
 
     ```{r}
     lm.model |> 
@@ -267,7 +248,7 @@ Citation for formatting p-values using Scales package: <https://scales.r-lib.org
 
 ## 2.3 Model Fit
 
-The linear regression model explains about 39% (98.56726) of the total variance (251.129) in sustainability (SDI). This R-squared value is generally considered to be relatively low, indicating that the quality of the model is less than ideal. Additionally, the standard deviation of the residuals (sigma) is 12.5, indicating that there is a fair amount of variability in the residuals.
+The linear regression model explains about 39% (fitted variance: 98.56726) of the total variance (251.129) in sustainability (SDI). This R-squared value (fitted variance/total variance) is considered to be relatively low, indicating that the quality of the model is less than ideal. Additionally, the standard deviation of the residuals (sigma) is 12.5, indicating that there is a fair amount of variability in the residuals.
 
 ```{r}
 lm.model |> 
@@ -295,3 +276,29 @@ lm.model |>
 ```
 
 # 6. Works Cited
+
+FocusEconomics. “GDP per Capita (USD) Archives.” *FocusEconomics*, 28 May 2025, www.focus- economics.com/economic-indicator/gdp-per-capita/.
+
+Gahrib, Sarah. “Rich Countries Have a ‘responsibility’ to Fund Climate Efforts. Here’s Why.” *Global Citizen*, www.globalcitizen.org/en/content/international-climate-finance-explainer/. Accessed 30 May 2025.
+
+“GDP per Capita in Constant PPP Dollars.” *Gapminder*, www.gapminder.org/data/documentation/gd001/. Accessed 30 May 2025.
+
+“GDP per Capita, PPP (Constant 2021 International \$).” *World Bank Open Data*, data.worldbank.org/indicator/NY.GDP.PCAP.PP.KD. Accessed 30 May 2025.
+
+“Label P-Values (e.g. &lt;0.001, 0.25, p &gt;= 0.99) - Label_pvalue.” *- Label_pvalue • Scales*, scales.r-lib.org/reference/label_pvalue.html. Accessed 30 May 2025.
+
+Lindgren, Mattias. "Doumentation for GDP per Capita by Purchasing Power Parities." *Gapminder,* https://www.gapminder.org/documentation/documentation/gapdoc001_v9.pdf*.* Accessed 30 May 2025.
+
+“Maddison Project Database 2023.” *University of Groningen*, 24 Sept. 2024, www.rug.nl/ggdc/historicaldevelopment/maddison/releases/maddison-project-database-2023.
+
+“Most Sustainable Countries in the World: Robeco USA.” *Robeco.Com - The Investment Engineers*, 16 Dec. 2024, www.robeco.com/en-us/sustainable-investing/expertise/most-sustainable-countries-in-the-world.
+
+Paddison, Laura. “How the Rich Are Driving Climate Change.” *BBC News*, BBC, 24 Feb. 2022, www.bbc.com/future/article/20211025-climate-how-to-make-the-rich-pay-for-their-carbon-emissions.
+
+“PWT 10.01.” *University of Groningen*, 18 Nov. 2024, www.rug.nl/ggdc/productivity/pwt/.
+
+Sexton, Chrissy. “Wealthy Nations Are Making More Progress toward Sustainable Development.” *Earth.Com*, www.earth.com/news/wealthy-nations-are-making-more-progress-toward-sustainable-development/. Accessed 30 May 2025.
+
+“Sustainable Development Index.” *SUSTAINABLE DEVELOPMENT INDEX*, www.sustainabledevelopmentindex.org/. Accessed 30 May 2025.
+
+U., Jean. "Sustainable Development Index." *Gapminder,* 6 May 2021, https://docs.google.com/spreadsheets/d/1ZkqSheuabUTYIw7d3U-fyV0HB3HnSI9lJyYM4saNc2U/edit?gid=501532268#gid=501532268.
